--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">My Dice test</string>
     <string name="app_button_1">ROll</string>
     <string name="Toast_1">Dice Rolled!</string>
+    <string name="Toast_1">Dice Number Changed!</string>
     <string name="dice_no">Dice no. is </string>
     <string name="app_button_2">Change</string>
-    <string name="defaultdiceno" translatable="false">1</string>
+    <string name="default_dice_no" translatable="false">1</string>
 </resources>
