--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">My Dice test</string>
     <string name="app_button_1">骰</string>
+    <string name="app_button_2">更改</string>
+    <string name="dice_no">骰子數</string>
 </resources>
